--- a/Home/templates/home/index.html
+++ b/Home/templates/home/index.html
@@ -9,10 +9,9 @@
 		<title>Transitive by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="{% static 'Home/assets/css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'home/assets/css/main.css' %}" />
 	</head>
 	<body>
-
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
@@ -34,7 +33,7 @@
 			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 			formats to work correctly.
 		-->
-			<section id="banner" data-video="images/banner">
+			<section id="banner" data-video="{% static 'home/images/banner' %}">
 				<div class="inner">
 					<h1>Transitive</h1>
 					<p>A full responsive, business-oriented HTML5/CSS3 template<br />
@@ -49,7 +48,7 @@
 					<div>
 						<div class="box">
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="{% static 'home/images/pic01.jpg' %}" alt="" />
 							</div>
 							<div class="content">
 								<header class="align-center">
@@ -108,7 +107,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="{% static 'home/images/pic02.jpg' %}" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -124,7 +123,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="{% static 'home/images/pic03.jpg' %}" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -200,12 +199,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="{% static 'home/assets/js/jquery.min.js' %}"></script>
+			<script src="{% static 'home/assets/js/jquery.scrolly.min.js' %}"></script>
+			<script src="{% static 'home/assets/js/jquery.scrollex.min.js' %}"></script>
+			<script src="{% static 'home/assets/js/skel.min.js' %}"></script>
+			<script src="{% static 'home/assets/js/util.js' %}"></script>
+			<script src="{% static 'home/assets/js/main.js' %}"></script>
 
 	</body>
 </html>
