--- a/Home/templates/home/index.html
+++ b/Home/templates/home/index.html
@@ -167,16 +167,15 @@
 									<div class="field half first">
 										<label for="name">Name</label>
 										{{ form.name }}
-										<input name="name" id="name" type="text" placeholder="Name">
 									</div>
 									<div class="field half">
 										<label for="email">Email</label>
 										{{ form.email }}
-										<input name="email" id="email" type="email" placeholder="Email">
 									</div>
 									<div class="field">
 										<label for="dept">Department</label>
 										<div class="select-wrapper">
+											{{ form.dept }}
 											<select name="dept" id="dept">
 												<option value="">- Category -</option>
 												<option value="1">Manufacturing</option>
@@ -189,7 +188,6 @@
 									<div class="field">
 										<label for="message">Message</label>
 										{{ form.message }}
-										<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
 									</div>
 									<ul class="actions align-center">
 										<li><input value="Send Message" class="button special" type="submit"></li>
